fixed bug:change scrollBar style

--- a/src/global.less
+++ b/src/global.less
@@ -8,6 +8,13 @@
 .ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
   left: unset;
 }
+.ant-tree-list-scrollbar{
+  background-color: #e3e3e3 !important;
+  border-radius: 20px;
+  .ant-tree-list-scrollbar-thumb{
+    background-color: #979797 !important;
+  }
+}
 
 canvas {
   display: block;
